Fix image loading causing installed game crash after splash screen (#14013)
* Fix image loading causing installed game crash after splash screen

- /assets is now processed a resource directory by the build, causing it to be packaged in the project jar.
- EngineImageLoader now uses classpath resource loading, making the working directory less important to running the game.
- ResourceLoader methods for loading /assets files have been replaced with calls to EngineImageLoader, removing lots of now unnecessary code, and exception types.
- ImageFactory and UnitImageFactory now try /assets if initial (map file download) paths don't exist.
- Update documentation - assets found should no longer be possible, this now explains the process by which it is packaged and how to view logs to debug crashes after splash screen load.
- EventQueue uncaught exceptions should now log full stack trace info.

* Update README.md - FAQ - Game crashes - wording

Wording changed in 
# FAQ - common problems
### Game crashes after splash screen displayed

* Implement suggestions from code review

- Create a getAssetsFileLocation() static method inside ResourceLoader to hide most access to ResourceLoader.ASSETS_FOLDER.
- Rename methods for clarity.

* Make assets folder location private in ResourceLoader

- Remove some code from map making to default a location that is no longer relevant.

---------

Co-authored-by: frigoref <frigoref@web.de>